2021-01-08 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSComboBoxCell.h: Correct type of instance variables.
	* Source/GSGuiPrivate.h: Add macros for encoding/decoding.
	* Source/NSActionCell.m,
	* Source/NSButtonCell.m,
	* Source/NSCell.m,
	* Source/NSComboBoxCell.m,
	* Source/NSImageCell.m,
	* Source/NSLevelIndicatorCell.m,
	* Source/NSPathCell.m,
	* Source/NSPopUpButtonCell.m,
	* Source/NSSearchFieldCell.m,
	* Source/NSSliderCell.m,
	* Source/NSStepperCell.m: Change encoding/decoding to protect
	against differences in integer size.

2020-12-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSearchFieldCell.m: Use GSTheme to display the popup.

2020-12-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSearchField.m,
	* Source/NSSearchFieldCell.m: Small cleanups in formatting and
	int types.

2020-12-11 Riccardo Mottola <rm@gnu.org>

	* Source/GSToolbarView.m,
	Use centerScanRect to correct Items frame and avoid flickering.

2020-12-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarFrameworkPrivate.h,
	* Source/GSToolbarView.m,
	* Source/NSToolbar.m: Minor changes to format code, remove unused
	methods and introduce some new helper methods.

2020-11-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m (-mouseDown:): Protect against _window going
	away during tracking.

2020-11-23 Riccardo Mottola <rm@gnu.org>
	* Source/NSPopUpButtonCell.m (release):
	Use standard setMenu: in release and avoid leaking the Menu. (Proposed by Fred)

2020-11-03 Riccardo Mottola <rm@gnu.org>

	* Source/NSBitmapImageRep+JPEG.m (_JPEGRepresentationWithProperties:):
	Support greyscape output colorspace in JPEG decompression, fix Alpha output do NO, since JPEGs do not support it.

2020-10-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-validateEditing): Reset _isValidating on
	intermediate return.
	Patch by Andreas Höschler <ahoesch@smartsoft.de>.

2020-10-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColor.m: Protect against theme colour list missing out